--- a/Argos/package.json
+++ b/Argos/package.json
@@ -8,6 +8,9 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.22",
+    "@fortawesome/free-solid-svg-icons": "^5.10.2",
+    "@fortawesome/react-native-fontawesome": "^0.1.0",
     "expo": "^34.0.1",
     "fetch-awesome": "^2.0.3",
     "react": "16.8.3",
@@ -15,6 +18,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-reanimated": "^1.1.0",
+    "react-native-svg": "^9.8.1",
     "react-native-web": "^0.11.4",
     "react-navigation": "^3.11.1"
   },
